enterprise-devsecops-hackathon/k8s/memcached.yaml
apiVersion: v1
kind: Pod
metadata:
  name: memcached
spec:
  containers:
    - name: memcached
      image: memcached:latest
      ports:
        - containerPort: 11211
