enterprise-devsecops-hackathon/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-app
spec:
  type: ClusterIP
  selector:
    app: enterprise-app
  ports:
    - port: 8080
      targetPort: 8080
